<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hello"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="46dp"
        tools:text="@string/welcome_main_zag" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="108dp"
        tools:text="@string/welcome_main_pod" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="231dp"
        tools:text="@string/welcome_main_vhod" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/welcome_main_tint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="277dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_main_btn1"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="341dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_main_text"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="650dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_main_btn2"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="673dp" />
</androidx.constraintlayout.widget.ConstraintLayout>